# agentOS

./: .gitignore  AGENTS.md  LICENSE  README.md  agentOS.def  build_apptainer.sh  demo.cast  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
agentOS/: agent.py
agentOS/data/: agent.db  config.json
agentOS/src/core/: dependencies.py  engine.py  llm.py  schemas.py  style.py
agentOS/src/skills/disk/: cleaner.py
agentOS/src/skills/memory/: manager.py
agentOS/src/skills/system/: tools.py
docs/: technical_reference.md
tests/evals/: test_agent_logfire_evaluation.py  test_agent_pydantic_evals.py
tests/integration/: test_agent_integration.py
tests/unit/: test_disk_skill.py  test_memory_skill.py  test_system_skill.py
trash/: NOTEs  clean_disk_tool.py  clean_system_tool.py
