[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos"
version = "0.1.0"
description = "AgentOS: Your Personal System Agent"
authors = [{name = "David", email = ""}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.1",
    "logfire>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=agentOS",
    "--cov-report=html",
    "--cov-report=term-missing"
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions", 
    "eval: Evaluation tests for agent behavior",
    "slow: Tests that take a long time to run",
    "benchmark: Performance benchmark tests"
]

[tool.coverage.run]
source = ["agentOS/"]
omit = [
    "*/venv/*",
    "*/env/*", 
    "*/__pycache__/*",
    "*/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
